--- a/MusicalLake/MusicalLake.cabal
+++ b/MusicalLake/MusicalLake.cabal
@@ -48,13 +48,16 @@ executable MusicalLake-exe
 
 test-suite MusicalLake-test
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  main-is: Main.hs
   other-modules:
+      Spec
       Paths_MusicalLake
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       MusicalLake
+    , QuickCheck
     , base >=4.7 && <5
+    , hspec
   default-language: Haskell2010
