--- a/MusicalLake/package.yaml
+++ b/MusicalLake/package.yaml
@@ -38,7 +38,7 @@ executables:
 
 tests:
   MusicalLake-test:
-    main:                Spec.hs
+    main:                Main.hs
     source-dirs:         test
     ghc-options:
     - -threaded
@@ -46,3 +46,5 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - MusicalLake
+    - hspec
+    - QuickCheck
